--- a/src/app/acceuil/acceuil.page.html
+++ b/src/app/acceuil/acceuil.page.html
@@ -12,7 +12,7 @@
 
 <ion-content >
 
-  <div class="contenue" style="background-image: url('assets/svg/paisleySimple_nobg.svg');">
+  <div class="contenue" style="background-color: rgba(231, 174, 16, 0.06);">
     <ion-card class="content">
       <ion-card-content>Tailleur</ion-card-content>
     </ion-card>
@@ -39,10 +39,6 @@
 
     <ion-card class="content">
       <ion-card-content>Bourou</ion-card-content>
-    </ion-card>
-
-    <ion-card class="content">
-      <ion-card-content>Location</ion-card-content>
     </ion-card>
 
     <ion-card class="content">
