--- a/src/app/acceuil/acceuil.page.scss
+++ b/src/app/acceuil/acceuil.page.scss
@@ -1,7 +1,7 @@
 .bar_recherche{
     height: auto;
     margin: 0;
-    background-color: rgba(127, 255, 212, 0.527);
+    background-color: rgb(111, 32, 176);
     width: 100%;
     z-index: 10000;
 }
