--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="service">
       <ion-icon name="cog-outline"></ion-icon>
-      <ion-label>Nos Services</ion-label>
+      <ion-label>A Propos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="acceuil">
